[package]
name = "reverse-image-search"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of reverse image search aggregator"
license = "MIT"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = [
    "json",
    "multipart",
    "stream",
    "cookies",
    "gzip",
    "brotli",
    "deflate",
    "http2",
] }
reqwest_cookie_store = "0.8.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_urlencoded = "0.7.1"
anyhow = "1.0.95"
thiserror = "2.0.11"
url = "2.5.4"
bytes = "1.10.0"
base64 = "0.22.1"
async-trait = "0.1.86"
futures = "0.3.31"
regex = "1.11.1"
log = "0.4.25"
env_logger = "0.11.6"
image = "0.25.5"
html-escape = "0.2.13"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15"
scraper = "0.22.0"
